# ofxstatement-fidelity

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/ofxstatement_fidelity/: plugin.py
tests/: test_sample.py
